crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_with_composables.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize_canon with croquis scopes
// ============================================

// ========== Vue Runtime Types ==========
import type {
  Ref,
  ComputedRef,
  UnwrapRef,
  Reactive,
  ShallowRef,
  WritableComputedRef,
} from 'vue';

import {
  ref,
  reactive,
  computed,
  watch,
  watchEffect,
  unref,
  toRef,
  toRefs,
  shallowRef,
  triggerRef,
  customRef,
  readonly,
  onMounted,
  onUnmounted,
  onBeforeMount,
  onBeforeUnmount,
  onUpdated,
  onBeforeUpdate,
  onActivated,
  onDeactivated,
  onErrorCaptured,
  nextTick,
  getCurrentInstance,
  inject,
  provide,
} from 'vue';

type MaybeRef<T> = T | Ref<T>;

// ========== Hoisted Imports ==========
import { useMouse } from '@vueuse/core'

// ========== Props Interface ==========
interface __VizeProps {}

// ========== Emits Interface ==========
interface __VizeEmits {}

// ========== Slots Interface ==========
interface __VizeSlots {
  [name: string]: ((props: Record<string, unknown>) => any) | undefined;
}

// ========== Generic Setup Function ==========
// Supports <script setup generic="T">
function __setup<
  __Props extends __VizeProps = __VizeProps,
  __Emits extends __VizeEmits = __VizeEmits,
  __Slots extends __VizeSlots = __VizeSlots,
>(
  __props: __Props,
  __ctx: {
    emit: __Emits;
    slots: __Slots;
    attrs: Record<string, unknown>;
    expose: (exposed?: Record<string, unknown>) => void;
  }
) {
  // ========== Script Setup Content ==========


const { x, y } = useMouse()
  // @vize-map: 1560:1590 -> 65:94

  // ========== Template Function ==========
  function __template() {
    // Vue instance context (template-scoped)
    // Properties
    const $data: Record<string, unknown> = {};
    const $props = __props;
    const $el: HTMLElement | undefined = undefined;
    const $options: Record<string, unknown> = {};
    const $parent: any = undefined;
    const $root: any = undefined;
    const $slots = __ctx.slots;
    const $refs: Record<string, any> = {};
    const $attrs = __ctx.attrs;
    // Methods
    const $emit = __ctx.emit;
    const $watch: (source: string | (() => any), callback: (newVal: any, oldVal: any) => void, options?: { immediate?: boolean; deep?: boolean }) => () => void = undefined!;
    const $forceUpdate: () => void = undefined!;
    const $nextTick: (callback?: () => void) => Promise<void> = undefined!;

    // Script setup bindings (mark as used for unused detection)
    void useMouse;
    void x;
    void y;

    // ========== Template Expressions ==========
    // Interpolation @147:148
    void (x);
    // @vize-map: 2649:2663 -> 147:148
    // Interpolation @156:157
    void (y);
    // @vize-map: 2732:2746 -> 156:157

  }

  // Component render return
  return __template;
}
